--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="profile"class="nav-link">Profile</a></li>
-                    <li class="nav-item"><a href="contacts"class="nav-link">Contacts</a></li>
-                    <li class="nav-item"><a href="skills"class="nav-link">Skills</a></li>
-                    <li class="nav-item"><a href="code"class="nav-link">Code</a></li>
-                    <li class="nav-item"><a href="experience"class="nav-link">Experience</a></li>
-                    <li class="nav-item"><a href="education"class="nav-link">Education</a></li>
-                    <li class="nav-item"><a href="english"class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="profile" class="nav-link">Profile</a></li>
+                    <li class="nav-item"><a href="contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="experience" class="nav-link">Experience</a></li>
+                    <li class="nav-item"><a href="education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="english" class="nav-link">English</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +27,7 @@
             <section class="section"  id="profile">
                 <h1>Polina Rakitina</h1>
                 <p>A motivated beginner in web development, eager to learn and apply skills in real-world projects. Passionate about mastering HTML, CSS, and JavaScript to build user-friendly applications.</p>
-                <img src="assets\img\photo.jpg" alt="Polina Rakitina" class="profile-photo">
+                <img src="assets/img/photo.jpg" alt="Polina Rakitina" class="profile-photo">
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
@@ -37,13 +37,45 @@
                     <li class="section-item"><a href="https://discordapp.com/users/952648319388225597/ ">Discord: plushhhka</a></li>
                 </ul>
             </section>
-            
+            <section>
+                <h2 class="section" id="skills">Skills</h2>
+                <ul class="section-list">
+                    <li class="section-item">HTML</li>
+                    <li class="section-item">CSS</li>
+                    <li class="section-item">Git&GitHub</li>
+                    <li class="section-item">Markdown</li>
+                </ul>
+            </section>
+            <section>
+                <h2 class="section" id="code">Code</h2>
+                <pre><code>
+                function multiply(a, b) {
+                    return a * b;
+                }</code></pre>
+            </section>
+            <section>
+                <h2 class="section" id="experience">Experience</h2>
+                <p>Markdown & Git Task: Created a CV using Markdown and deployed it on GitHub Pages.</p>
+            </section>
+            <section>
+                <h2 class="section" id="education">Education</h2>    
+                <p>BNTU, Software Engeneer, 2028(in progrees)</p>           
+            </section>
+            <section>
+                <h2 class="section" id="english">English</h2>
+                <p>Intermediate (B1), learned at school.</p>
+            </section>
         </div>
 
 
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="container">
+            <a href="https://github.com/plushhhka">GitHub: plushhhka</a>
+            <span>2025</span>
+            <a href="https://app.rs.school" class="rss-logo"><img src="assets/img/rs-school-logo.svg" alt="RS School">
+            </a>
+        </div>
     </footer>
     </body>
     </html>
