feat: add link to the course

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <a href="https://github.com/plushhhka">GitHub: plushhhka</a>
             <span>2025</span>
-            <a href="https://app.rs.school" class="rss-logo"><img src="assets/img/rs-school-logo.svg" alt="RS School">
+            <a href="https://rs.school/courses/javascript-preschool-ru" class="rss-logo"><img src="assets/img/rs-school-logo.svg" alt="RS School">
             </a>
         </div>
     </footer>
