style: change font

--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Polina Rakitina - CV</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
     </head>
     <body>
     <header class="header">
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="profile" class="nav-link">Profile</a></li>
-                    <li class="nav-item"><a href="contacts" class="nav-link">Contacts</a></li>
-                    <li class="nav-item"><a href="skills" class="nav-link">Skills</a></li>
-                    <li class="nav-item"><a href="code" class="nav-link">Code</a></li>
-                    <li class="nav-item"><a href="experience" class="nav-link">Experience</a></li>
-                    <li class="nav-item"><a href="education" class="nav-link">Education</a></li>
-                    <li class="nav-item"><a href="english" class="nav-link">English</a></li>
+                    <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
         <div class="container">
-            <section class="section"  id="profile">
-                <h1>Polina Rakitina</h1>
-                <p>A motivated beginner in web development, eager to learn and apply skills in real-world projects. Passionate about mastering HTML, CSS, and JavaScript to build user-friendly applications.</p>
-                <img src="assets/img/photo.jpg" alt="Polina Rakitina" class="profile-photo">
-            </section>
+            <section class="section" id="profile">
+                <div class="profile-header">
+                    <h1>Polina Rakitina</h1>
+                </div>
+                <div class="profile-content">
+                    <img src="assets/img/photo.jpg" alt="Polina Rakitina" class="profile-photo">
+                <div class="profile-text">
+                    <p>A motivated beginner in web development, eager to learn and apply skills in real-world projects.Passionate about mastering HTML, CSS, and JavaScript to build user-friendly applications.</p>
+                </div>
+    </div>
+</section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
                 <ul class="section-list">
@@ -37,8 +46,8 @@
                     <li class="section-item"><a href="https://discordapp.com/users/952648319388225597/ ">Discord: plushhhka</a></li>
                 </ul>
             </section>
-            <section>
-                <h2 class="section" id="skills">Skills</h2>
+            <section class="section">
+                <h2 id="skills">Skills</h2>
                 <ul class="section-list">
                     <li class="section-item">HTML</li>
                     <li class="section-item">CSS</li>
@@ -46,23 +55,23 @@
                     <li class="section-item">Markdown</li>
                 </ul>
             </section>
-            <section>
-                <h2 class="section" id="code">Code</h2>
+            <section class="section">
+                <h2 id="code">Code</h2>
                 <pre><code>
                 function multiply(a, b) {
                     return a * b;
                 }</code></pre>
             </section>
-            <section>
-                <h2 class="section" id="experience">Experience</h2>
+            <section class="section">
+                <h2 id="experience">Experience</h2>
                 <p>Markdown & Git Task: Created a CV using Markdown and deployed it on GitHub Pages.</p>
             </section>
-            <section>
-                <h2 class="section" id="education">Education</h2>    
+            <section class="section">
+                <h2 id="education">Education</h2>    
                 <p>BNTU, Software Engeneer, 2028(in progrees)</p>           
             </section>
-            <section>
-                <h2 class="section" id="english">English</h2>
+            <section class="section">
+                <h2 id="english">English</h2>
                 <p>Intermediate (B1), learned at school.</p>
             </section>
         </div>
@@ -73,7 +82,7 @@
         <div class="container">
             <a href="https://github.com/plushhhka">GitHub: plushhhka</a>
             <span>2025</span>
-            <a href="https://rs.school/courses/javascript-preschool-ru" class="rss-logo"><img src="assets/img/rs-school-logo.svg" alt="RS School">
+            <a href="https://app.rs.school" class="rss-logo"><img src="assets/img/rs-school-logo.svg" alt="RS School">
             </a>
         </div>
     </footer>
