feat: chamge path to images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1>Polina Rakitina</h1>
                 </div>
                 <div class="profile-content">
-                    <img src="assets/img/photo.jpg" alt="Polina Rakitina" class="profile-photo">
+                    <img src="/rsschool-cv/assets/img/photo.jpg" alt="Polina Rakitina" class="profile-photo">
                 <div class="profile-text">
                     <p>A motivated beginner in web development, eager to learn and apply skills in real-world projects.Passionate about mastering HTML, CSS, and JavaScript to build user-friendly applications.</p>
                 </div>
@@ -82,7 +82,7 @@
         <div class="container">
             <a href="https://github.com/plushhhka">GitHub: plushhhka</a>
             <span>2025</span>
-            <a href="https://app.rs.school" class="rss-logo"><img src="assets/img/rs-school-logo.svg" alt="RS School">
+            <a href="https://app.rs.school" class="rss-logo"><img src="/rsschool-cv/assets/img/rs-school-logo.svg" alt="RS School">
             </a>
         </div>
     </footer>
